# rsengine

./: .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yml
crates/common/: Cargo.toml
crates/common/src/: config.rs  errors.rs  lib.rs  request.rs
crates/runtime/: Cargo.toml
crates/runtime/src/: lib.rs
crates/server/: Cargo.toml
crates/server/src/: app.rs  context.rs  errors.rs  handlers.rs  lib.rs  main.rs  telemetry.rs
crates/server/tests/: http_surface.rs  react_bundle.rs  streaming.rs
docs/: implementation_plan.md
examples/: hello.bundle.js
examples/react-ssr-stream/: README.md  build.mjs  package-lock.json  package.json  tsconfig.json
examples/react-ssr-stream/src/: App.tsx  stream.tsx
xtask/: Cargo.toml
xtask/src/: main.rs
