[package]
name = "runtime"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
rust-version.workspace = true

[dependencies]
anyhow = { workspace = true }
serde = { workspace = true, features = ["derive"] }
tokio = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
common = { path = "../common" }
http = { workspace = true }
serde_json = { workspace = true }
html-escape = { workspace = true }
async-trait = { workspace = true }

[dev-dependencies]
tempfile = "3.10"
